[package]
name = "wallhaven"
version = "0.1.0"
edition = "2021"
authors = ["Dax99993"]
license = "MIT"
description = "A CLI for quickly access WallHaven API for downloading wallpapers"
readme = "README.md"
repository = "https://github.com/dax99993/wallhaven"

keywords = ["graphics", "cli", "image", "wallpaper", "api", "wallhaven"]
categories = ["graphics", "command-line-utilities", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
futures = "0.3.23"
indicatif = "0.17.0"
reqwest = { version = "0.11.11", features = ["json", "stream"] }
serde = { version = "1.0.144", features = ["derive"] }
shellexpand = "2.1.2"
tokio = { version = "1.20.1", features = ["full"] }
